Fix https://bz.apache.org/bugzilla/show_bug.cgi?id=61600 Use new Commons Daemon option to set Java 9 specific JVM options required to prevent warnings appearing in the logs on Tomcat stop.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1816140 13f79535-47bb-0310-9956-ffa450edef68